# tareeq

./: .bazelrc  .clang-tidy  .gitignore  .nav.bazelrc  .tareeq.bazelrc  CMakeLists.txt  Cargo.toml  README.md  WORKSPACE  list_of_files.txt  package.xml
av/can_client/: BUILD  CANClient.h  CANDBC.h  CommaAICANInterface.h  LibUsbDevice.h  SocketCANInterface.h  SocketCANInterfaceImpl.cc
av/component/: BUILD  Component.h  ComponentFactory.h  ROSComponentFactory.cc  ROSComponentFactory.h  StopWatch.cc  StopWatch.h
av/launch/: BUILD  DynamicCompositionLaunch.h  ManualCompositionLaunch.cc  ManualCompositionLaunch.h  NAVLaunch.cc  NAVLaunch.h
av/localization/: BUILD.bazel  Cargo.toml
av/localization/examples/: chatgpt_extended_kalman_filter.rs  concatenate_matrices.rs
av/localization/test/: BUILD.bazel
av/motors/: BUILD.bazel  SabertoothMotorController.cpp  SabertoothMotorController.hpp
av/planning/: Cargo.toml
av/routing/: Cargo.toml
bazel/: .bazelrc  .clang-format  .tareeq.bazelrc  WORKSPACE
bazel/samples/ros2/: BUILD.bazel  ros2_imu_node_standalone.cpp
bazel/samples/ros2/mcap/: BUILD.bazel  main.cpp
bazel/samples/ros2/minimal_composition/: BUILD.bazel  subscriber_node.cpp
can_client/: CANDBC.cc  CANDBCMessage.cc  CANDBCMessage.h  DeviceInfo.h  UsbDevice.h  panda_component.cc
can_client/exceptions/: CANException.h
can_client/standalone-bins/: BUILD
can_client/test/: CANDBCTest.cc
component/: BUILD  Component.h
config/: nav2.yaml  zed.yaml  zed2.yaml
courses/carla/: BUILD  SimpleClient.cc
cyber/time/: clock.h
docker/scripts/: cyber_start.sh  dev_into.sh  dev_start.sh  docker_base.sh  (+2 more)
launch/: BUILD  BUILD.bazel  CMakeLists.txt  DynamicCompositionLaunch.cc  DynamicCompositionLaunch.h  LauchWaveRover.cpp  LaunchImuSensors.hpp  NAVLaunch.cc  isaac_ros_visual_slam_zed.launch.py  nav2.launch.py  nvblox.launch.py  tareeqav_launch.py  vslam.launch.py  zed2.launch.py
modules/platform/sensors/: BUILD.bazel  ImuData.hpp  SensorManager.cpp  SensorRegistry.cpp
modules/platform/sensors/imus/: BUILD.bazel  QMI8658ImuSensor.hpp
modules/platform/sensors/zed/: ZedCamera.hpp  ZedVisualOdometrySensor.hpp
panda/: BUILD
perception/: BUILD  ZedCameraComponent.cc  ZedCameraComponent.h  ZedFullComponent.cc  ZedFullComponent.h
platform/: CMakeLists.txt
platform/actuators/: BUILD.bazel  CMakeLists.txt  MobileBaseActuator.cpp  MobileBaseActuator.hpp  SabertoothMotorController.cpp  SabertoothMotorController.hpp
platform/actuators/motors/: BUILD.bazel  MotorController.hpp  SabertoothMotorController.hpp
platform/actuators/teleop/: JoystickNode.cpp  KeyboardTeleop.cpp  KeyboardTeleop.hpp
platform/devices/: BUILD.bazel  BoostNetworkDevice.hpp  BoostSerialPort.cpp  BoostSerialPort.hpp  DeviceInterface.hpp  DeviceManager.hpp  ISerialPort.hpp  SerialDevice.hpp  SerialDeviceManager.hpp
platform/devices/test/: BUILD.bazel  BoostSerialPortTest.cpp  SerialDeviceTest.cpp
platform/io/: AsioOperationsImpl.hpp  BUILD.bazel  BoostNetworkIO.hpp  BoostSerialDevice.cpp  BoostSerialDevice.hpp  BoostSerialDeviceManager.cpp  BoostSerialDeviceManager.hpp  BoostSerialIO.hpp  CMakeLists.txt  IAsioOperations.hpp  IOInterface.hpp  Status.hpp
platform/io/can/: BUILD  CANDBCMessageSchema.cc  SocketCANDevice.h  SocketCANInterfaceImpl.cc  SocketCANMessage.h  UsbDevice.h  panda_component.h
platform/io/can/exceptions/: CANCloseException.h  InvalidSocketException.h
platform/io/can/standalone-bins/: BUILD  SocketCANSendSteeringCommand.cc
platform/io/can/test/: test_boardd_loopback.py  test_boardd_usbprotocol.cc
platform/logging/: BUILD.bazel  Logger.hpp  LoggerFactory.hpp  ROS2Logger.hpp
platform/motors/: BUILD.bazel  MotorController.hpp  SabertoothMotorController.cpp  SabertoothMotorController.hpp  WaveRoverMotorController.hpp
platform/motors/standalone-bins/: BUILD.bazel  run_sabertooth_motor.cpp  run_wave_rover_motor_standalone.cpp
platform/ros2/: BUILD.bazel  IMUPublisher.hpp
platform/ros2/actuators/: BUILD.bazel  MobileBaseActuator.hpp
platform/ros2/actuators/motors/: SabertoothMotorController.cpp
platform/ros2/config/: nvblox_zed.yaml
platform/ros2/localization/: BUILD.bazel  IMUPublisher.hpp
platform/ros2/localization/test/: BUILD.bazel  IMUPublisherTest.cpp
platform/ros2/recording/: BUILD.bazel  McapRecorderNode.cpp  McapRecorderNode.hpp
platform/ros2/sensors/: ImuData.cpp  Sensor.hpp  SensorConcepts.hpp  SensorManager.hpp  SensorRegistry.hpp  SensorTemplate.hpp
platform/ros2/sensors/imu/: IMUDataTypeExtractor.hpp
platform/ros2/sensors/odometry/: BUILD.bazel
platform/ros2/sensors/zed/: ZedImuSensor.hpp
platform/ros2/slam/: SLAMActionClient.cpp
platform/ros2/teleop/: BUILD.bazel  JoystickNode.cpp  JoystickNode.hpp  KeyboardTeleop.cpp
platform/slam/: CMakeLists.txt  SLAMActionClient.hpp  SLAMServiceClient.cpp  SLAMServiceClient.hpp
platform/test/: BUILD.bazel
platform/test/mocks/: MockISerialPort.hpp  MockLogger.hpp
platform/wave_rover/: BUILD.bazel  WaveRoverIMUController.hpp  WaveRoverManager.hpp  WaveRoverMotorController.hpp  WaveRoverNetworkDeviceManager.hpp  WaveRoverUtils.hpp
platform/wave_rover/standalone-bins/: BUILD.bazel  make_simple_http_command.cpp  read_imu_data.cpp  run_wave_rover_motor_standalone.cpp
platform/zed/: BUILD.bazel  ZedIMUController.hpp
samples/: CMakeLists.txt
samples/plotters/: Cargo.toml
samples/plotters-gtk-simple/: Cargo.toml
samples/plotters-gtk-simple/src/: main.rs  matrix_plot.rs
samples/wave_rover/: BUILD.bazel  boost_network_io.cpp  make_simple_http_command.cpp  move_rover_using_ros2.cpp  read_imu_data.cpp  run_wave_rover_motor_standalone.cpp
samples/zed2/: BUILD.bazel  zed_wrapper.cpp
scripts/: apollo.bashrc  launch_tareeq_debug.sh  tareeq.bashrc
system/: CMakeLists.txt  CmdVelocity.cpp  MapServerClient.cpp  TareeqAV.cpp
tools/: bazel.rc  workspace.bzl
vehicles/wave_rover/: BUILD.bazel  WaveRoverDevicesManager.cpp  WaveRoverDevicesManager.hpp  WaveRoverImuReader.cpp  WaveRoverImuReader.hpp  WaveRoverMotorController.hpp  WaveRoverROS2Manager.cpp  WaveRoverROS2Manager.hpp
(+465 files in other folders)
