<?xml version="1.0"?>
<package format="3">
  <name>tareeq</name>
  <version>0.0.1</version>
  <description>A simple ROS 2 publisher node in C++</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
