# -*- mode: python -*-
# vi: set ft=python :

load("@ros2//:ros_cc.bzl", "ros_cc_binary", "ros_cc_test")
load("@ros2//:ros_py.bzl", "ros_launch", "ros_py_binary", "ros_py_test")
load("@ros2//:rosidl.bzl", "rosidl_interfaces_group")
load("//tools:cmd_test.bzl", "cmd_test")

ros_cc_binary(
    name = "TareeqAV",
    srcs = ["TareeqAV.cpp"],
    rmw_implementation = "rmw_fastrtps_cpp",
    shim = "reexec",
    tags = ["requires-network"],
    deps = [
        "//platform/actuators:MobileBaseActuator",
        "@ros2//:rclcpp_action_cc",
        "@ros2//:rclcpp_cc",
    ],
)
