[package]
name = "localization"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chatgpt_extended_kalman_filter"
path = "examples/chatgpt_extended_kalman_filter.rs"

[[bin]]
name = "ekf"
path = "examples/extended_kalman_filter.rs"

[dependencies]
nalgebra = "0.32.4"
rand = "0.8.5"
rand_distr = "0.4.3"
gtk = { package = "gtk4", version = "0.6" }

[dependencies.plotters]
git = "https://github.com/plotters-rs/plotters"
#default_features = false
#features = ["surface_series"]

[dependencies.plotters-cairo]
git = "https://github.com/plotters-rs/plotters-cairo"
rev = "515ab36f59ff28f1c0db7d98b410d51a7bbf9677"
