package(default_visibility = ["//visibility:public"])

cc_library(
    name = "MobileBaseActuator",
    hdrs = ["MobileBaseActuator.hpp"],
    deps = [
        "//platform/errors",
        "//platform/ros2/recording:McapRecorder",
        "@ros2_common_interfaces//:cpp_geometry_msgs",
        "@ros2_common_interfaces//:cpp_std_msgs",
        "@ros2_rclcpp//:rclcpp",
    ],
)
