package(default_visibility = ["//visibility:public"])

cc_library(
    name = "MobileBaseActuator",
    srcs = ["MobileBaseActuator.cpp"],
    hdrs = ["MobileBaseActuator.hpp"],
    deps = [
        "//platform/errors",
        "//platform/io:Status",
        "@ros2//:geometry_msgs_cc",
        "@ros2//:rclcpp_action_cc",
        "@ros2//:rclcpp_cc",
    ],
)
