cc_library(
    name = "DeviceInterface",
    hdrs = ["DeviceInterface.hpp"],
    deps = [],
)

cc_library(
    name = "ISerialPort",
    srcs = ["ISerialPort.hpp"],
    deps = [],
)

cc_library(
    name = "SerialDevice",
    srcs = ["SerialDevice.hpp"],
    deps = [],
)

cc_library(
    name = "BoostSerialPort",
    hdrs = ["BoostSerialPort.hpp"],
    deps = [
        ":ISerialPort",
        "@boost//:asio",
    ],
)
