package(default_visibility = ["//visibility:public"])

cc_library(
    name = "DeviceInterface",
    hdrs = ["DeviceInterface.hpp"],
    deps = [],
)

cc_library(
    name = "ISerialPort",
    srcs = ["ISerialPort.hpp"],
    deps = [],
)

cc_library(
    name = "SerialDeviceManager",
    srcs = ["SerialDeviceManager.hpp"],
    deps = [],
)

cc_library(
    name = "BoostSerialPort",
    hdrs = ["BoostSerialPort.hpp"],
    deps = [
        ":ISerialPort",
        "@boost//:asio",
    ],
)

cc_library(
    name = "BoostNetworkDevice",
    hdrs = ["BoostNetworkDevice.hpp"],
    deps = [
        ":ISerialPort",
        "@boost//:asio",
        "@boost//:beast",
    ],
)
