package(default_visibility = ["//visibility:public"])

cc_library(
    name = "DeviceInterface",
    hdrs = ["DeviceInterface.hpp"],
    deps = [],
)

cc_library(
    name = "ISerialPort",
    srcs = ["ISerialPort.hpp"],
    deps = [],
)

cc_library(
    name = "DeviceManager",
    srcs = ["DeviceManager.hpp"],
    deps = [],
)
