package(default_visibility = ["//visibility:public"])

cc_library(
    name = "IAsioOperations",
    hdrs = ["IAsioOperations.hpp"],
    deps = [
        "@boost//:asio",
    ],
)

cc_library(
    name = "AsioOperationsImpl",
    srcs = ["AsioOperationsImpl.hpp"],
    deps = [
        ":IAsioOperations",
        "@boost//:asio",
    ],
)
