package(default_visibility = ["//visibility:public"])

cc_library(
    name = "IAsioOperations",
    hdrs = ["IAsioOperations.hpp"],
    deps = [
        "@boost//:asio",
    ],
)

cc_library(
    name = "AsioOperationsImpl",
    srcs = ["AsioOperationsImpl.hpp"],
    deps = [
        ":IAsioOperations",
        "@boost//:asio",
    ],
)

cc_library(
    name = "IOInterface",
    hdrs = ["IOInterface.hpp"],
)

cc_library(
    name = "BoostSerialIO",
    hdrs = ["BoostSerialIO.hpp"],
    deps = [
        ":IOInterface",
        "@boost//:asio",
    ],
)

cc_library(
    name = "BoostNetworkIO",
    hdrs = ["BoostNetworkIO.hpp"],
    deps = [
        ":IOInterface",
        "@boost//:asio",
        "@boost//:beast",
    ],
)
