cc_library(
    name = "MockLogger",
    hdrs = ["mocks/MockLogger.hpp"],
    deps = [
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "MockIAsioOperations",
    hdrs = ["mocks/MockIAsioOperations.hpp"],
    deps = [
        "@boost//:asio",
        "@com_google_googletest//:gtest_main",
    ],
)
