package(default_visibility = ["//visibility:public"])

cc_library(
    name = "MockLogger",
    hdrs = ["mocks/MockLogger.hpp"],
    deps = [
        "//platform/logging:LoggerFactory",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "MockIAsioOperations",
    hdrs = ["mocks/MockIAsioOperations.hpp"],
    deps = [
        "//platform/io:IAsioOperations",
        "@boost//:asio",
        "@com_google_googletest//:gtest_main",
    ],
)
