package(default_visibility = ["//visibility:public"])

cc_library(
    name = "WaveRoverUtils",
    hdrs = ["WaveRoverUtils.hpp"],
    deps = [
        "@nlohmann_json//:json",
    ],
)

cc_library(
    name = "WaveRoverManager",
    hdrs = ["WaveRoverManager.hpp"],
    deps = [
        ":WaveRoverUtils",
    ],
)
