package(default_visibility = ["//visibility:public"])

config_setting(
    name = "x86_64",
    values = {"cpu": "k8"},
)

config_setting(
    name = "aarch64",
    values = {"cpu": "aarch64"},
)

cc_library(
    name = "ZedIMUController",
    hdrs = ["ZedIMUController.hpp"],
    deps = ["@ros2_geometry2//:tf2"] + select({
        ":x86_64": ["@zed"],
        ":aarch64": ["@zed//:zed_aarch64"],
    }),
)
