[package]
name = "plotters-gtk-simple"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "matrix_plot"
path = "src/matrix_plot.rs"

[dependencies]
nalgebra = "0.32.4"
gtk = { package = "gtk4", version = "0.6" }

[dependencies.plotters]
git = "https://github.com/plotters-rs/plotters"
#default_features = false
#features = ["surface_series"]

[dependencies.plotters-cairo]
git = "https://github.com/plotters-rs/plotters-cairo"
rev = "515ab36f59ff28f1c0db7d98b410d51a7bbf9677"

