[package]
name = "samples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "popup_window"
path = "src/popup_window.rs"

[dependencies]
minifb = "0.23.0"

[dependencies.plotters]
git = "https://github.com/plotters-rs/plotters"
default_features = false
features = ["ttf"]

[dependencies.plotters-bitmap]
default_features = false
git = "https://github.com/plotters-rs/plotters"