cc_binary(
    name = "read_imu_data",
    srcs = ["read_imu_data.cpp"],
    deps = [
        "//platform/io:AsioOperationsImpl",
        "//platform/io:BoostNetworkIO",
        "//platform/logging:LoggerFactory",
        "//platform/sensors/imu:IMUData",
        "//platform/vehicle/wave_rover:WaveRoverIMUController",
        "//platform/vehicle/wave_rover:WaveRoverNetworkDeviceManager",
    ],
)

cc_binary(
    name = "move_rover_using_ros2",
    srcs = ["move_rover_using_ros2.cpp"],
    deps = [
        "//platform/vehicle/wave_rover:WaveRoverROS2Manager",
        "@ros2_common_interfaces//:cpp_sensor_msgs",
        "@ros2_rclcpp//:rclcpp",
    ],
)

cc_binary(
    name = "make_simple_http_command",
    srcs = ["make_simple_http_command.cpp"],
    deps = [
        "@boost//:asio",
        "@boost//:beast",
    ],
)
