config_setting(
    name = "x86_64",
    values = {"cpu": "k8"},
)

config_setting(
    name = "aarch64",
    values = {"cpu": "aarch64"},
)

cc_binary(
    name = "get_imu_data",
    srcs = ["get_imu_data.cpp"],
    deps = select({
        ":x86_64": ["@zed"],
        ":aarch64": ["@zed//:zed_aarch64"],
    }) + [
        "@zed_interfaces//:cpp_zed_interfaces",
        "@zed_ros2_wrapper",
    ],
)
