package(default_visibility = ["//visibility:public"])

cc_library(
    name = "WaveRoverDevicesManager",
    srcs = ["WaveRoverDevicesManager.cpp"],
    hdrs = ["WaveRoverDevicesManager.hpp"],
    deps = [
        "//platform/io:BoostSerialDeviceManager",
        "//platform/logging:Logger",
        "@fmt",
    ],
)

cc_library(
    name = "WaveRoverImuReader",
    srcs = ["WaveRoverImuReader.cpp"],
    hdrs = ["WaveRoverImuReader.hpp"],
    deps = [
        ":WaveRoverDevicesManager",
        "//platform/logging:Logger",
    ],
)
