cc_binary(
    name = "ros2_imu_node_standalone",
    srcs = ["ros2_imu_node_standalone.cpp"],
    deps = [
        "//platform/io:AsioOperationsImpl",
        "//platform/io:BoostNetworkIO",
        "//platform/logging:LoggerFactory",
        "//platform/ros2/localization:IMUPublisher",
        "//platform/vehicle/wave_rover:WaveRoverIMUController",
        "//platform/vehicle/wave_rover:WaveRoverNetworkDeviceManager",
        "@com_google_googletest//:gtest",
        "@ros2_common_interfaces//:cpp_sensor_msgs",
        "@ros2_rclcpp//:rclcpp",
    ],
)
