#cc_binary(
#    name = "run_sabertooth_motor",
#    srcs = ["run_sabertooth_motor.cpp"],
#    deps = [
#        "//av/motors:SabertoothMotorController",
#    ],
#)

cc_binary(
    name = "run_wave_rover_motor_standalone",
    srcs = ["run_wave_rover_motor_standalone.cpp"],
    deps = [
        "//platform/devices:BoostSerialPort",
        "//platform/devices:SerialDeviceManager",
        "//platform/io:AsioOperationsImpl",
        "//platform/logging:LoggerFactory",
        "//platform/motors:WaveRoverMotorController",
    ],
)
