load("@com_github_mvukov_rules_ros2//ros2:cc_defs.bzl", "ros2_cpp_binary")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "McapRecorder",
    hdrs = ["McapRecorder.hpp"],
    deps = [
        "@ros2_rclcpp//:rclcpp",
        "@ros2_rosbag2//:rosbag2_cpp",
        "@ros2_rosbag2//:rosbag2_storage",
    ],
)

ros2_cpp_binary(
    name = "McapRecorderNode",
    srcs = [
        "McapRecorderNode.cpp",
        "McapRecorderNode.hpp",
    ],
    set_up_ament = True,
    deps = [
        ":McapRecorder",
        "@ros2_common_interfaces//:cpp_geometry_msgs",
        "@ros2_common_interfaces//:cpp_nav_msgs",
        "@ros2_common_interfaces//:cpp_sensor_msgs",
        "@ros2_message_filters//:message_filters",
        "@ros2_rclcpp//:rclcpp",
    ],
)
